--- a/english.html
+++ b/english.html
@@ -79,7 +79,7 @@ h2 {
 <h2>Miina Kokoi</h2>
 <body>
             <div class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="cv.html">CV</a>
             <a href="english.html">In English</a>
         </div>
