--- a/index2.html
+++ b/index2.html
@@ -80,8 +80,8 @@ h2 {
 <body>
             <div class="navbar">
             <a href="index.html">Home</a>
-            <a href="cv.html">CV</a>
-            <a href="english.html">In English</a>
+            <a href="indexl">CV</a>
+            <a href="index2">In English</a>
         </div>
     </div>
 
