--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ h2 {
     
         <div class="navbar">
             <a href="index.html">Home</a>
-            <a href="cv.html">CV</a>
-            <a href="english.html">In English</a>
+            <a href="index1.html">CV</a>
+            <a href="index2.html">In English</a>
         </div>
     </div>
 
