--- a/index.html
+++ b/index.html
@@ -51,3 +51,44 @@
 
         .row {
             display:
+      </style>          
+</head>
+<h2>Miina Kokoi</h2>
+<body>
+        
+        <div class="navbar">
+            <a href="index.html">Home</a>
+            <a href="cv.html">CV</a>
+            <a href="english.html">In English</a>
+        </div>
+
+    <div class="content">
+        <div class="row">
+            <div class="column">
+                <h3>KOULUTUS</h3>
+                <p>Otavan Opisto Nettlukio, valmistumisvuosi 2023.</p>
+                <p>Ylioppilas, valmistumisvuosi 2023</p>
+                <p>Haaga-Helia ammattikorkeakoulu Tradenomi, tietojenkäsittely</p>
+                
+            </div>
+            <div class="column">
+                <h3>TYÖKOKEMUS</h3>
+                <p>-Järjestöavustaja maaliskuusta 2023 lähtien</p>
+                <p>-Myyjä, SOK, 2022</p>
+                <p>-Perhepäivähoitaja, Nurmeksen Kaupunki, 2022</p>
+                <p>Varhaiskasvatuksen lastenhoitajan sijaisuudet, 2021-2023</p>
+                <p>-Henkilökohtainen avustaja, SiunSote, kesä 2021</p>
+                <p>Valokuvaaja, 2019-2022</p>
+
+            </div>
+            <div class="column">
+                <h3>SUOSITUKSET</h3>
+                <p>Suositukset saatavilla pyydettäessä.</p>
+                <p><a href="https://fi.linkedin.com/in/miina-kokoi-a677b6288" target="_blank">LinkedIn</a></p>
+            </p>
+            </div>
+        </div>
+    </div>
+</body>
+<footer>©Miina Kokoi 2023</footer>
+</html>
