--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@ h2 {
 }
 
        @media (max-width: 600px) {
-    .navbar {
-        flex-direction: column;
-                float: none;
-                display: block;
-                text-align: left;
+    .column {
+        flex: 100%; /* Span full width */
+        padding: 10px; /* Adjusted padding */
+        background-color: #ffffff;
+        margin: 5px;
+        text-align: center;
             }
         }
     </style>
