--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ h2 {
 
        @media (max-width: 600px) {
     .column {
-        flex: 100%; /* Span full width */
-        padding: 10px; /* Adjusted padding */
+        flex: 100%;
+        padding: 10px;
         background-color: #ffffff;
         margin: 5px;
         text-align: center;
