--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <title>Miina Kokoi</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
+            body {
             font-family: 'Cormorant', serif;
             margin: 0;
             padding: 0;
@@ -36,7 +36,6 @@
             color: black;
             text-align: center;
             padding: 14px 16px;
-            text-decoration: none;
             font-size: 18pt;
             letter-spacing: 2px;
         }
@@ -51,6 +50,7 @@
 
         .row {
             display: flex;
+            flex-wrap: wrap;
         }
 
         .column {
@@ -66,11 +66,13 @@ h2 {
     font-size: 30pt;
 }
 
-        @media (max-width: 600px) {
-            .navbar a {
-                float: none;
-                display: block;
-                text-align: left;
+       @media (max-width: 600px) {
+    .column {
+        flex: 100%;
+        padding: 10px;
+        background-color: #ffffff;
+        margin: 5px;
+        text-align: center;
             }
         }
     </style>
