--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ h2 {
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="index1.html">CV</a>
-            <a href="index2.html">In English</a>
+            <a href="index2.html">IN ENGLISH</a>
         </div>
     </div>
 
