--- a/index1.html
+++ b/index1.html
@@ -83,7 +83,7 @@ h2 {
         <div class="navbar">
             <a href="index.html">Home</a>
             <a href="index1.html">CV</a>
-            <a href="index2.html">In English</a>
+            <a href="index2.html">IN ENGLISH</a>
         </div>
 
     <div class="content">
@@ -93,12 +93,13 @@ h2 {
                 <p>Otavan Opisto Nettlukio, valmistumisvuosi 2023.</p>
                 <p>Ylioppilas, valmistumisvuosi 2023</p>
                 <p>Haaga-Helia ammattikorkeakoulu Tradenomi, tietojenkäsittely</p>
+        
                 
             </div>
             <div class="column">
                 <h3>TYÖKOKEMUS</h3>
-                <p>-Järjestöavustaja maaliskuusta 2023 lähtien</p>
-                <p>-Myyjä, SOK, 2022</p>
+                <p>-Järjestöavustaja, maaliskuusta 2023 lähtien</p>
+                <p>-Myyjä, PKO, 2022</p>
                 <p>-Perhepäivähoitaja, Nurmeksen Kaupunki, 2022</p>
                 <p>Varhaiskasvatuksen lastenhoitajan sijaisuudet, 2021-2023</p>
                 <p>-Henkilökohtainen avustaja, SiunSote, kesä 2021</p>
