--- a/index2.html
+++ b/index2.html
@@ -82,7 +82,7 @@ h2 {
             <div class="navbar">
             <a href="index.html">Home</a>
             <a href="indexl">CV</a>
-            <a href="index2">In English</a>
+            <a href="index2">IN ENGLISH</a>
         </div>
     </div>
 
@@ -91,9 +91,9 @@ h2 {
             <div class="column">
                 <h3>ABOUT ME</h3>
                 <p>Reliable,</p>
-                <p>Flexible,</p>
+                <p>Adaptable,</p>
                 <p>Responsible.</p>
-                <p>Widely respected within the work community, a versatile customer service professional</p>
+                <p>Congenia and widely respected within the work community, a versatile customer service professional</p>
                 <p>Otavan Opisto Nettlukio, grad. 2023</p>
                 <p>Matriculation Examination, 2023</p>
                 <p>Haaga-Helia University of Applied Sciences BBA, Information Technology</p>
@@ -102,7 +102,7 @@ h2 {
             </div>
             <div class="column">
                 <h3>WORK EXPERIENCE</h3>
-                <p>-NGO Assistant since March 2023</p>
+                <p>-NGO Assistant, since March 2023</p>
                 <p>-Salesperson, SOK, 2022</p>
                 <p>-Childminder, The City of Nurmes, 2022</p>
                 <p>Early Education Substitutions, 2021-2023</p>
