--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ h2 {
                 <p>Luotettava,</p>
                 <p>joustava,</p>
                 <p>vastuullinen.</p>
-                <p>Työ-yhteisössä pidetty, kaikkien kanssa toimeentuleva asiakaspalvelun moniosaaja.</p>
+                <p>Työyhteisössä pidetty, kaikkien kanssa toimeentuleva asiakaspalvelun moniosaaja.</p>
             </div>
             <div class="column">
                 <img src="omakuvaMV.jpg" style="width: 70%;">
