--- a/index.html
+++ b/index.html
@@ -5,86 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miina Kokoi</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Cormorant', serif;
-            margin: 0;
-            padding: 0;
-            background-color: white;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            font-size: 16pt;
-        }
-
-        footer {
-            font-family: 'Cormorant', serif;
-            margin: 0;
-            padding: 0;
-            background-color: rgb(211, 211, 211);
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            font-size: 16pt;
-            text-align: center;
-        }
-
-        .navbar {
-            background-color: #A2C0C0;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-        }
-
-        .navbar a {
-            color: black;
-            text-align: center;
-            padding: 14px 16px;
-            font-size: 18pt;
-            letter-spacing: 2px;
-        }
-
-        .navbar a:hover {
-            background-color: #6B8E8E;
-        }
-
-        .content {
-            padding: 20px;
-        }
-
-        .row {
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .column {
-            flex: 1;
-            padding: 10px;
-            background-color: #ffffff;
-            margin: 5px;
-            text-align: center;
-        }
-
-h2 {
-    text-align: center;
-    font-size: 30pt;
-}
-
-       @media (max-width: 600px) {
-    .column {
-        flex: 100%;
-        padding: 10px;
-        background-color: #ffffff;
-        margin: 5px;
-        text-align: center;
-            }
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<h2>Miina Kokoi</h2>
 <body>
-    
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="index1.html">CV</a>
-            <a href="index2.html">IN ENGLISH</a>
-        </div>
+    <h2>Miina Kokoi</h2>
+
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="index1.html">CV</a>
+        <a href="index2.html">IN ENGLISH</a>
     </div>
 
     <div class="content">
@@ -106,10 +35,10 @@ h2 {
                 <p>miina.kokoi@hotmail.com</p>
                 <p>+358 40 966 0923</p>
                 <p><a href="https://fi.linkedin.com/in/miina-kokoi-a677b6288" target="_blank">LinkedIn</a></p>
-            </p>
             </div>
         </div>
     </div>
+
+    <footer>©Miina Kokoi 2023</footer>
 </body>
-<footer>©Miina Kokoi 2023</footer>
 </html>
