--- a/index2.html
+++ b/index2.html
@@ -30,11 +30,11 @@
             </div>
             <div class="column">
                 <h3>WORK EXPERIENCE</h3>
-                <p>- NGO Assistant, since March 2023</p>
-                <p>- Salesperson, SOK, 2022</p>
-                <p>- Childminder, The City of Nurmes, 2022</p>
+                <p>NGO Assistant, since March 2023</p>
+                <p>Salesperson, SOK, 2022</p>
+                <p>Childminder, The City of Nurmes, 2022</p>
                 <p>Early Education Substitutions, 2021-2023</p>
-                <p>- Personal Assistant, SiunSote, summer of 2021</p>
+                <p>Personal Assistant, SiunSote, summer of 2021</p>
                 <p>Photographer, 2019-2022</p>
             </div>
             <div class="column">
