--- a/index1.html
+++ b/index1.html
@@ -26,12 +26,12 @@
             </div>
             <div class="column">
                 <h3>TYÖKOKEMUS</h3>
-                <p>- Järjestöavustaja, maaliskuusta 2023 lähtien</p>
-                <p>- Myyjä, PKO, 2022</p>
-                <p>- Perhepäivähoitaja, Nurmeksen Kaupunki, 2022</p>
-                <p>- Varhaiskasvatuksen lastenhoitajan sijaisuudet, 2021-2023</p>
-                <p>- Henkilökohtainen avustaja, SiunSote, kesä 2021</p>
-                <p>- Valokuvaaja, 2019-2022</p>
+                <p>Järjestöavustaja, maaliskuusta 2023 lähtien</p>
+                <p>Myyjä, PKO, 2022</p>
+                <p>Perhepäivähoitaja, Nurmeksen Kaupunki, 2022</p>
+                <p>Varhaiskasvatuksen lastenhoitajan sijaisuudet, 2021-2023</p>
+                <p>Henkilökohtainen avustaja, SiunSote, kesä 2021</p>
+                <p>Valokuvaaja, 2019-2022</p>
             </div>
             <div class "column">
                 <h3>SUOSITUKSET</h3>
