--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
                 <p>Henkilökohtainen avustaja, SiunSote, kesä 2021</p>
                 <p>Valokuvaaja, 2019-2022</p>
             </div>
-            <div class "column">
+            <div class="column">
                 <h3>SUOSITUKSET</h3>
                 <p>Suositukset saatavilla pyydettäessä.</p>
                 <p><a href="https://fi.linkedin.com/in/miina-kokoi-a677b6288" target="_blank">LinkedIn</a></p>
